Fix group product bug
Code wasn't set up to handle two different group products because group products were never given a schedule ID, which caused issues with scheduling when the products saw a pool of unassigned sessions not linked to anything.
