# apps/api/src/product/product.service.ts
@@ -16,6 +16,7 @@ const mapper = (entity: ProductEntity): Product => {
     active: entity.active,
     amount: entity.amount,
     description: entity.description,
+    scheduleId: entity.scheduleId?.toString(),
     features: entity.features,
   }
 }
@@ -37,6 +38,7 @@ export class ProductService {
       active: createProductDto.active,
       amount: createProductDto.amount,
       description: createProductDto.description,
+      scheduleId: createProductDto.scheduleId ? new Types.ObjectId(createProductDto.scheduleId) : undefined,
       features: createProductDto.features,
     })
     const entity = await this.model.findById(result._id)
