# apps/api/src/product/product.ts
@@ -9,5 +9,6 @@ export class Product {
   active: boolean
   amount: number
   description: string
+  scheduleId?: string
   features: string[]
 }
